test/spec_vectors/table_get/fail/module_2.wat
(module (table $t 10 externref) (func $type-index-f32-vs-i32 (result externref) (table.get $t (f32.const 1))))